Code cleanup
enforce enqueue on all public mutating operations
simplify returns
make plannedSize private to mask
use generic List over Linked List
assertCompatibleMask before enqueue
Generify basic array operations